Estimate fetch size based on table schema